# robocup-goalkeeper

./: README.md
firmware/: Doxyfile  README.md
firmware/components/nanopb/: CMakeLists.txt
firmware/docs/: mainpage.dox
firmware/docs/html/: _c_make_files_23_830_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_830_82_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  (+432 more)
firmware/include/: as5600.h  bno055.h  kinematics.h  motor.h  pid.h  platform_esp32s3.h  ssl_defs.h  ssl_parser.h  ssl_receiver.h  udp_server.h  wifi.h  wifi_connect.h
firmware/main/: CMakeLists.txt  init.c  init.h  main.c
firmware/protobuf/: messages.options  messages_robocup_ssl_detection.pb.c  messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_detection.proto  messages_robocup_ssl_geometry.pb.c  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_wrapper.pb.c  messages_robocup_ssl_wrapper.pb.h
firmware/scripts/: generate_docs.ps1  generate_docs.sh
firmware/src/: as5600.c  bno055.c  kinematics.c  motor.c  pid.c  platform_esp32s3.c  ssl_parser.c  ssl_receiver.c  udp_server.c  wifi.c  wifi_connect.c
firmware/tasks/: ssl_parser_task.c  ssl_receiver_task.c  task_control.c  task_inverse_kinematics.c  task_kalman_filter.c  task_monitor.c  task_move.c  task_read_sensors.c  task_state_estimation.c  task_wifi_comm.c  wifi_task.c
firmware/tests/: kinematics_test.c
firmware/utils/: config_utils.h  gpio_utils.h  types.h  types_utils.h
hardware/CAD/: vim4_case_body v3.stl  vim4_case_cam.stl  vim4_case_cover.stl
media/Server_UDP/: listenerUDP.py  udp_server.py
(+135 files in other folders)
